[package]
name = "suss"
version = "0.0.2"
edition = "2021"
authors = ["Matti Bryce <mattibryce@protonmail.com>"]
license = "AGPL-3.0-or-later"
description = "Create collections of single-instance unix socket services, started on-demand by any clients using them."
keywords = ["actor", "async", "io", "non-blocking", "daemon", "unix"]
categories = ["network-programming"]
readme = "README.md"
repository = "https://github.com/informorphic-matti/suss"
homepage = "https://github.com/informorphic-matti/suss"
documentation = "https://docs.rs/suss"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
# Used in our std async unix socket shims
blocking = "1"
log = "0.4" 
futures-lite = "1"
tracing = { version = "0.1", features = ["log"] }
nanorand = { version = "0.7", default-features = false, features = ["std", "getrandom", "chacha", "zeroize"]}
humantime = "2"

# Note that we have these as optional dependencies to implement asynchronous unix stream interfaces
tokio = { version = "1", optional = true, default-features = false, features = ["net", "io-util", "time"]}
async-std = { version = "1", optional = true }
