[package]
name = "suss"
version = "0.0.3"
edition = "2021"
authors = ["Matti Bryce <mattibryce@protonmail.com>"]
license = "AGPL-3.0-or-later"
description = "Create collections of single-instance unix socket services, started on-demand by any clients using them."
keywords = ["async", "io", "non-blocking", "daemon", "unix"]
categories = ["network-programming"]
readme = "README.md"
repository = "https://github.com/infomorphic-matti/suss"
homepage = "https://github.com/infomorphic-matti/suss"
documentation = "https://docs.rs/suss"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
# Used in our std async unix socket shims
blocking = "1"
futures-lite = "1"
tracing = { version = "0.1" }
nanorand = { version = "0.7", default-features = false, features = ["std", "getrandom", "chacha", "zeroize"]}
humantime = "2"
chain-trans = "1"

# Note that we have these as optional dependencies to implement asynchronous unix stream interfaces
tokio = { version = "1", optional = true, default-features = false, features = ["net", "io-util", "time"]}
async-std = { version = "1", optional = true }


[package.metadata.docs.rs]
all-features = true
